<resources>
    <string name="app_name">To-Do List</string>
    <string name="hint_enter_task">Enter a new task...</string>
    <string name="btn_add_task">+ Add Task</string>
    <string name="btn_update_task">Update</string>
    <string name="hint_delete_task">Drag handle to reorder. Tap icons to edit/delete.</string>
    <string name="toast_enter_task">Please enter a task!</string>
    <string name="toast_task_deleted">Task deleted!</string>
    <string name="toast_task_updated">Task updated!</string>
    <string name="dialog_edit_title">Edit Task</string>
    <string name="dialog_delete_title">Delete Task</string>
    <string name="dialog_delete_message">Are you sure you want to delete this task?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="header_todo">To Do</string>
    <string name="header_completed">Completed</string>
</resources>