<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="40dp"
    android:background="@color/background_dark">

    <!-- App Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/primary_accent"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <!-- Task Input -->
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_task"
        android:textColorHint="@color/text_secondary"
        android:textColor="@color/text_primary"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:textSize="16sp"
        android:inputType="text"
        android:importantForAutofill="no" />

    <!-- Add Button -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_task"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/primary_accent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"/>

    <!-- Task List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- Hint text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_delete_task"
        android:textSize="12sp"
        android:textColor="@color/text_secondary"
        android:gravity="center"
        android:paddingTop="8dp"/>

</LinearLayout>